Implemented assigning equipments to users and remoiving this assignment