@@ -1,10 +1,17 @@
 package org.buczek.engineering.thesis.app.equipmentbasemanagementapp.service;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.model.dto.EquipmentDto;
+import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.model.dto.EquipmentWithLocalizationDto;
+import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.model.dto.LocalizationDto;
 import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.model.entity.Equipment;
+import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.model.entity.Localization;
+import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.model.enums.EquipmentState;
+import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.model.request.AssignEquipmentRequest;
 import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.repository.EquipmentRepository;
+import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.repository.LocalizationRepository;
 import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.security.UserRepository;
 import org.buczek.engineering.thesis.app.equipmentbasemanagementapp.security.model.User;
 import org.springframework.stereotype.Service;
@@ -21,6 +28,10 @@ public class EquipmentService {
 
     private final EquipmentRepository equipmentRepository;
     private final UserRepository userRepository;
+    private final LocalizationRepository localizationRepository;
+
+    private final UserService userService;
+    private final LocalizationService localizationService;
 
     public void saveNewEquipment(EquipmentDto equipmentDto) {
         Long userId = equipmentDto.userId();
@@ -33,8 +44,11 @@ public class EquipmentService {
         }
     }
 
-    public List<EquipmentDto> getAllEquipments() {
-        return equipmentRepository.findAll().stream().map(this::mapEquipmentEntityToDto).collect(Collectors.toList());
+    public List<EquipmentWithLocalizationDto> getAllEquipments() {
+        List<Equipment> equipments = equipmentRepository.findAll();
+        return equipments.stream()
+                .map(this::mapEquipmentEntityToEquipmentWithLocalizationDto)
+                .toList();
     }
 
     public List<EquipmentDto> getAllAvailableEquipments() {
@@ -55,12 +69,53 @@ public class EquipmentService {
         return equipmentRepository.findByOwnerId(userId).stream().map(this::mapEquipmentEntityToDto).collect(Collectors.toList());
     }
 
-    public void updateEquipment(EquipmentDto equipmentDto) {
-        equipmentRepository.save(mapEquipmentDtoToEntity(equipmentDto));
+    public void updateEquipment(EquipmentWithLocalizationDto equipmentWithLocalizationDto) {
+        Optional<Equipment> equipmentOptional = equipmentRepository.findById(equipmentWithLocalizationDto.equipment().id());
+        if (equipmentOptional.isPresent()) {
+            Long localizationId = equipmentOptional.get().getLocalization().getId();
+            equipmentRepository.save(mapEquipmentWithLocalizationDtoToEquipmentEntity(equipmentWithLocalizationDto, localizationId));
+
+        }
+    }
+
+    public void assignEquipment(AssignEquipmentRequest request) {
+        Optional<Equipment> equipmentOptional = equipmentRepository.findById(request.equipmentId());
+
+        if (equipmentOptional.isEmpty()) {
+            throw new EntityNotFoundException("Equipment with ID " + request.equipmentId() + " does not exists.");
+        }
+
+        User owner = userService.findUserById(request.userId());
+        Localization localization = localizationService.findLocalizationById(request.localizationId());
+        Equipment equipment = equipmentOptional.get();
+        prepareEquipmentToAssignment(equipment, owner, localization);
+        equipmentRepository.save(equipment);
+    }
+
+    public void removeEquipmentAssignment(Long equipmentId) {
+        Optional<Equipment> equipmentOptional = equipmentRepository.findById(equipmentId);
+        if (equipmentOptional.isEmpty()) {
+            throw new EntityNotFoundException("Equipment with ID " + equipmentId + " does not exists.");
+        }
+        Equipment equipment = equipmentOptional.get();
+        prepareEquipmentToRemoveAssignment(equipment);
+        equipmentRepository.save(equipment);
     }
 
     public void deleteEquipment(long equipmentId) {
         equipmentRepository.deleteById(equipmentId);
+    }
+
+    private void prepareEquipmentToAssignment(Equipment equipment, User owner, Localization localization) {
+        equipment.setOwner(owner);
+        equipment.setLocalization(localization);
+        equipment.setEquipmentState(EquipmentState.ASSIGNED);
+    }
+
+    private void prepareEquipmentToRemoveAssignment(Equipment equipment) {
+        equipment.setOwner(null);
+        equipment.setLocalization(null);
+        equipment.setEquipmentState(EquipmentState.NOT_ASSIGNED);
     }
 
     private Equipment mapEquipmentDtoToEntity(EquipmentDto equipmentDto, User user) {
@@ -73,15 +128,6 @@ public class EquipmentService {
                 .build();
     }
 
-    private Equipment mapEquipmentDtoToEntity(EquipmentDto equipmentDto) {
-        return Equipment.builder()
-                .id(equipmentDto.id())
-                .name(equipmentDto.name())
-                .brand(equipmentDto.brand())
-                .equipmentType(equipmentDto.equipmentType())
-                .serialNumber(equipmentDto.serialNumber())
-                .build();
-    }
     private EquipmentDto mapEquipmentEntityToDto(Equipment equipment) {
         return EquipmentDto.builder()
                 .id(equipment.getId())
@@ -91,6 +137,61 @@ public class EquipmentService {
                 .serialNumber(equipment.getSerialNumber())
                 .userId(equipment.getOwner() != null ? equipment.getOwner().getId() : -1)
                 .equipmentState(equipment.getEquipmentState())
+                .build();
+    }
+
+    private EquipmentWithLocalizationDto mapEquipmentEntityToEquipmentWithLocalizationDto(Equipment equipment) {
+
+        EquipmentDto equipmentDto = EquipmentDto.builder()
+                .id(equipment.getId())
+                .name(equipment.getName())
+                .brand(equipment.getBrand())
+                .equipmentType(equipment.getEquipmentType())
+                .serialNumber(equipment.getSerialNumber())
+                .userId(equipment.getOwner() != null ? equipment.getOwner().getId() : -1)
+                .equipmentState(equipment.getEquipmentState())
+                .build();
+
+        Localization localization = equipment.getLocalization();
+        LocalizationDto localizationDto = null;
+        if (localization != null) {
+            localizationDto = LocalizationDto.builder()
+                    .department(localization.getDepartment())
+                    .floor(Math.toIntExact(localization.getFloor()))
+                    .building(localization.getBuilding())
+                    .roomNumber(Math.toIntExact(localization.getRoomNumber()))
+                    .build();
+        }
+
+
+        return new EquipmentWithLocalizationDto(
+                equipmentDto,
+                localizationDto
+        );
+    }
+
+    private Equipment mapEquipmentWithLocalizationDtoToEquipmentEntity(
+            EquipmentWithLocalizationDto equipmentWithLocalizationDto,
+            Long localizationId
+    ) {
+        Localization localization = mapLocalizationDtoToEntity(equipmentWithLocalizationDto.localization());
+        localization.setId(localizationId);
+        return Equipment.builder()
+                .id(equipmentWithLocalizationDto.equipment().id())
+                .name(equipmentWithLocalizationDto.equipment().name())
+                .equipmentType(equipmentWithLocalizationDto.equipment().equipmentType())
+                .brand(equipmentWithLocalizationDto.equipment().brand())
+                .serialNumber(equipmentWithLocalizationDto.equipment().serialNumber())
+                .localization(localization)
+                .build();
+    }
+
+    private Localization mapLocalizationDtoToEntity(LocalizationDto localizationDto) {
+        return Localization.builder()
+                .department(localizationDto.department())
+                .building(localizationDto.building())
+                .floor(localizationDto.floor())
+                .roomNumber(localizationDto.roomNumber())
                 .build();
     }
 }
